# Polymarket-multibots

./: .env.example  .gitignore  AUDIT_2026-04-16.md  CLAUDE.md  README.md  bot.sh  config.json  main.py  polymarket.db-shm  polymarket.db-wal  pyproject.toml
5-min-buzzer/: .gitignore  Prompt-5-min.md  README.md  bot.py  config.yaml  market.py  requirements.txt  status.py  storage.py  strategy.py
backtesting/: backtest_runner.py  category_blocker.py  outcome_resolver.py  param_injector.py  snapshot_replay.py
core/: config.py  database.py  interfaces.py  models.py
dashboard/: api_server.py
dashboard/static/: index.html
engine/: ev_calculator.py  llm_validator.py  market_ranker.py  orderbook_analyzer.py  probability.py  signal_router.py  timing.py  volatility.py
execution/: analytics.py  order_executor.py  paper_wallet.py  position_manager.py  slippage.py
feeds/: binance_feed.py  polymarket_feed.py
intelligence/: whale_detector.py
polymarket_crypto_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_engine.py  test_execution.py  test_integration.py  test_schema.py
