[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-crypto-agents"
version = "0.1.0"
description = "Autonomous paper-trading bot for Polymarket crypto prediction markets"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "websockets==12.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "aiosqlite==0.20.0",
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.14.0",
    "ruff==0.4.7",
    "aioresponses==0.7.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
